# Fleet-Supervisor-Allocation

./: .gitignore  .gitmodules  NCUR_results.txt  README.md  arg_utils.py  demo_generate.py  env_ege.yml  environment.yaml  environment.yml  main.py  make_legend.py  optim_results.db  optuna_main.py  optuna_optimize.py  optuna_optimize_anymal_real.py  optuna_optimize_anymal_scarce.py  optuna_optimize_humanoid_fiveg.py  optuna_optimize_humanoid_real.py  optuna_optimize_humanoid_scarce.py  pyproject.toml  read_log_pkl_files.py  sciptts.txt  source_conda_env_export.yml  toy_example copy.py  toy_example.py
iflb/: parallel_experiment.py  parallel_experiment_optuna.py
plotting/: create_grid_plot.py  create_plots.py  extract_data_from_logs.py  plot.py  plot_ablition_studies.py  plot_ege_color.py  plot_ege_updated.py  process_logs.py  read_pkl.py  rebuttal_plot.py
scripts/: ASM.sh  BC.sh  CUR.sh  ED.sh  SM.sh  TD.sh  args_AllegroHand_NASM.txt  args_Anymal_NASM.txt  args_BallBalance_NASM.txt  args_allegro.txt  args_allegro_ASA.txt  args_allegro_NCUR.txt  args_ant.txt  args_anymal.txt  args_anymal_ASA.txt  args_anymal_NCUR.txt  args_ballbalance.txt  args_ballbalance_ASA.txt  args_ballbalance_NCUR.txt  args_humanoid.txt  args_humanoid_ASA.txt  args_humanoid_NASM.txt  args_humanoid_NCUR.txt  args_isaacgym_constraints.txt  args_isaacgym_demos.txt  current.sh  ege_test.sh  ensembledagger.sh  optimize.sh  optuna.txt  plot.sh  random.sh  rep.sh  run.sh  run_NCUR.sh  run_NCUR_2.sh  run_allegro.sh  run_anymal.sh  run_ballbalance.sh  run_humanoid.sh
scripts_copy/: args_allegro.txt  (+4 more)
(+73 files in other folders)
