[tool.poetry]
name = "fleet supervisor allocation"
version = "0.1.0"
description = "Repository for the Fleet Supervisor Allocation Project"
authors = ["oguzhanakcin <oguzhnakcin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.18"
isaacgym = {path = "./isaacgym/python", develop = true}
isaacgymenvs = {path = "./IsaacGymEnvs", develop = true}
ray = "1.13.0"
rl-games = "1.1.4"
numpy = "1.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
